internal/xds/translator/testdata/out/xds-ir/authorization-hosts.routes.yaml
- ignorePortInHostMatching: true
  name: envoy-gateway/gateway-1/http
  virtualHosts:
  - domains:
    - www.example.com
    name: envoy-gateway/gateway-1/http/www_example_com
    routes:
    - match:
        pathSeparatedPrefix: /foo
      name: httproute/default/httproute-1/rule/0/match/0/www_example_com
      route:
        cluster: httproute/default/httproute-1/rule/0
        upgradeConfigs:
        - upgradeType: websocket
      typedPerFilterConfig:
        envoy.filters.http.rbac:
          '@type': type.googleapis.com/envoy.extensions.filters.http.rbac.v3.RBACPerRoute
          rbac:
            matcher:
              matcherList:
                matchers:
                - onMatch:
                    action:
                      name: allow-specific-hosts-and-methods
                      typedConfig:
                        '@type': type.googleapis.com/envoy.config.rbac.v3.Action
                        name: ALLOW
                  predicate:
                    andMatcher:
                      predicate:
                      - orMatcher:
                          predicate:
                          - singlePredicate:
                              input:
                                name: http_header
                                typedConfig:
                                  '@type': type.googleapis.com/envoy.type.matcher.v3.HttpRequestHeaderMatchInput
                                  headerName: :method
                              valueMatch:
                                exact: GET
                                ignoreCase: true
                          - singlePredicate:
                              input:
                                name: http_header
                                typedConfig:
                                  '@type': type.googleapis.com/envoy.type.matcher.v3.HttpRequestHeaderMatchInput
                                  headerName: :method
                              valueMatch:
                                exact: POST
                                ignoreCase: true
                      - orMatcher:
                          predicate:
                          - singlePredicate:
                              input:
                                name: http_header
                                typedConfig:
                                  '@type': type.googleapis.com/envoy.type.matcher.v3.HttpRequestHeaderMatchInput
                                  headerName: :authority
                              valueMatch:
                                exact: www.example.com
                          - singlePredicate:
                              input:
                                name: http_header
                                typedConfig:
                                  '@type': type.googleapis.com/envoy.type.matcher.v3.HttpRequestHeaderMatchInput
                                  headerName: :authority
                              valueMatch:
                                suffix: .example.com
                      - orMatcher:
                          predicate:
                          - singlePredicate:
                              input:
                                name: http_header
                                typedConfig:
                                  '@type': type.googleapis.com/envoy.type.matcher.v3.HttpRequestHeaderMatchInput
                                  headerName: x-user-id
                              valueMatch:
                                exact: john
                          - singlePredicate:
                              input:
                                name: http_header
                                typedConfig:
                                  '@type': type.googleapis.com/envoy.type.matcher.v3.HttpRequestHeaderMatchInput
                                  headerName: x-user-id
                              valueMatch:
                                exact: alice
                - onMatch:
                    action:
                      name: allow-wildcard-host
                      typedConfig:
                        '@type': type.googleapis.com/envoy.config.rbac.v3.Action
                        name: ALLOW
                  predicate:
                    singlePredicate:
                      input:
                        name: http_header
                        typedConfig:
                          '@type': type.googleapis.com/envoy.type.matcher.v3.HttpRequestHeaderMatchInput
                          headerName: :authority
                      valueMatch:
                        suffix: .internal.example.com
              onNoMatch:
                action:
                  name: default
                  typedConfig:
                    '@type': type.googleapis.com/envoy.config.rbac.v3.Action
                    action: DENY
                    name: DENY
